packages/kyvernoPolicies/chart/tests/vpol/require-istio-on-namespaces-cel/chainsaw-test/namespace-bad.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: require-istio-on-namespaces-bad
