packages/kyvernoPolicies/chart/tests/vpol/require-istio-on-namespaces-cel/chainsaw-test/namespace-good.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: require-istio-on-namespaces-good
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: require-istio-on-namespaces-good-ambient
  labels:
    istio.io/dataplane-mode: ambient
